# crypto-tax-calculator

./: MANIFEST.in  README.md  crypto_tax_calculator.conf  pyproject.toml  setup.py
.github/wokflows/: publish.yml
config/: configuration.py  deploy_config.py  deprecated_settings.py  detect_environment.py
data/: crypto_tax_report_example.xlsx
src/: calculator.py  config.py  filter.py  history.py  logger.py  performance.py  platform.py  pool.py  report.py  session.py  stake.py  taxes.py  test_storage.py  trades.py  wallets.py
src/conversion/: adalite.py  aptoscan.py  barclays.py  binance.py  bitfinex.py  bitpanda.py  bitstamp.py  bittrex.py  blockfi.py  blockhain.py  bybit.py  cashapp.py  celsius.py  cexio.py  cgtcalculator.py  coinbase.py  coinomi.py  conversion.py  electrum.py  etherscan.py  exchanges.py  gateio.py  gemini.py  hitbtc.py  hotbit.py  hyperliquid.py  kraken.py  kucoin.py  ledgerlive.py  mexc.py  neonwallet.py  nft.py  okx.py  parser.py  paypal.py  price.py  quickstart.py  revolut.py  swissborg.py
src/mixins/: logging_mixin.py
src/tests/: management_tests.py
